--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <title>Frontend Mentor | Order summary card</title>
 
         <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-        <link rel="stylesheet" href="styles.css" />
+        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/styles.css" />
     </head>
 
     <body>
