--- a/index.html
+++ b/index.html
@@ -15,8 +15,14 @@
         <title>Frontend Mentor | Order summary card</title>
 
         <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="css/normalize.css" />
         <link rel="stylesheet" href="css/styles.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap"
+            rel="stylesheet"
+        />
     </head>
 
     <body>
