container + heading image

--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
 
     <body>
         <!-- Parent Container -->
-        <div>
+        <div class="container">
             <!-- Heading image -->
-            <div>
-                <img
-                    src="images/illustration-hero.svg"
-                    alt="A girl dancing with her headphones."
-                />
+            <div class="heading-image">
+              <img
+                  src="images/illustration-hero.svg"
+                  alt="A girl dancing with her headphones."
+              />
             </div>
 
             <!-- Summary description -->
