heading img now cover their container

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <!-- Parent Container -->
         <div class="container">
             <!-- Heading image -->
-            <div class="heading-image">
-              <img
+            <div class="heading-image-container">
+              <img class="heading-image"
                   src="images/illustration-hero.svg"
                   alt="A girl dancing with her headphones."
               />
