summary description styling

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </div>
 
             <!-- Summary description -->
-            <div>
+            <div class="summary-info">
                 <h1>Order Summary</h1>
                 <p>
                     You can now listen to millions of songs, audiobooks, and
