--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
             </div>
 
             <!-- Purchase Items -->
-            <div>
+            <div class="item-container">
                 <div>
                     <img src="images/icon-music.svg" alt="Icon music" />
                 </div>
-                <div>
+                <div class="item-description">
                     <h3>Annual Plan</h3>
                     <p>$59.99/year</p>
                 </div>
                 <div>
-                    <a href="#">Change</a>
+                    <a href="#" class="hyperlink">Change</a>
                 </div>
             </div>
             <div>
