center img item

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
             <!-- Purchase Items -->
             <div class="item-container">
-                <div>
+                <div class="item-img-container">
                     <img src="images/icon-music.svg" alt="Icon music" />
                 </div>
                 <div class="item-description">
