make buttons pretty

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
                     <a href="#" class="hyperlink">Change</a>
                 </div>
             </div>
-            <div>
-                <button type="submit" action="#">Proceed to Payment</button>
-                <button>Cancel Order</button>
+            <div class="button-container">
+                <button class="button button--success">Proceed to Payment</button>
+                <button class="button button--cancel">Cancel Order</button>
             </div>
         </div>
 
